Fix spacing for task detail view in lists with a background

--- a/src/styles/theme/background.scss
+++ b/src/styles/theme/background.scss
@@ -20,7 +20,7 @@
 
   .task-view {
     border-radius: $radius;
-    margin-top: 1rem;
+    margin: 0 1rem;
   }
 
   .kanban .tasks {
